<resources>
    <string name="app_name">DingtalkSMSBot</string>
    
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_dingtalk_setting">钉钉机器人设置</string>
    <string name="dingtalk_switch">启动开关</string>
    <string name="dingtalk_switch_summary">钉钉机器人开关</string>
    <string name="dingtalk_access_token">钉钉机器人token</string>
    <string name="dingtalk_nick">本机别名</string>
    <string name="dingtalk_access_token_default">3a642163433372aa5a96caf335b2e570ceed422d69ea7957dc32b5820f853350</string>
    <string name="sms_body_filter">短信内容过滤器</string>
    <string name="sms_body_filter_default">验证码</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
