<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="dingtalk_nick"
        android:title="@string/dingtalk_nick"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="dingtalk_accesstoken"
        android:title="@string/dingtalk_access_token"
        android:defaultValue="@string/dingtalk_access_token_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="sms_body_filter"
        android:title="@string/sms_body_filter"
        android:defaultValue="@string/sms_body_filter_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

</PreferenceScreen>